fix code wrapping in list

--- a/app/sass/page-md.scss
+++ b/app/sass/page-md.scss
@@ -20,15 +20,15 @@ main {
   flex-direction: row-reverse;
   justify-content: flex-end;
 
-  @media (max-width: 500px) {
-    padding-left: $small-padding;
-    padding-right: $small-padding;
-  }
-
   @media (max-width: 1000px) {
     flex-direction: column;
     /* At < 1000px, the TOC floats to the top, so we can add back the right-padding. */
     padding-right: $medium-padding;
+  }
+
+  @media (max-width: 500px) {
+    padding-left: $small-padding;
+    padding-right: $small-padding;
   }
 }
 
@@ -124,6 +124,7 @@ pre {
 code {
   color: #0D47A1;
   font-weight: 400;
+  word-wrap: break-word;
 }
 
 h2 {
